[package]
name = "solana-gossip-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
bs58 = "0.5.0"
ed25519 = "2.2.1"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
solana-client = "~1.14.17"
solana-gossip = "~1.14.17"
solana-net-utils = "~1.14.17"
solana-sdk = "~1.14.17"
solana-streamer = "~1.14.17"
